--- a/tests/acctest/Makefile
+++ b/tests/acctest/Makefile
@@ -1,3 +1,9 @@
+ifneq (yes,$(VERBOSE))
+	Q=@
+else
+	Q=
+endif
+
 CROSS=Y
 
 CROSSBINDIR_IS_Y=m68k-atari-mint-
@@ -82,7 +88,7 @@ endif
 ifneq ($(DEVKITMINT),)
 # ardi's toolchain stuff
 APP := $(APP:.ttp=.elf)
-STRIP := @echo "dont strip ELF-file befor tostool is done --> skip stripping of "
+STRIP := @echo "dont strip ELF-file before tostool is done --> skip stripping of "
 
 ctest: $(TEST_APP:.elf=.ttp)
 
@@ -101,21 +107,24 @@ all:$(patsubst %,%/$(APP),$(TRGTDIRS))
 #
 define CC_TEMPLATE
 $(1)/objs/%.o:$(SRCDIR)/%.c
-	$(CC) $$(CFLAGS) $(INCLUDE) -c $$< -o $$@
+	$(Q)echo "CC $$(@)"
+	$(Q)$(CC) $$(CFLAGS) $(INCLUDE) -c $$< -o $$@
 
 $(1)/%.o:$(SRCDIR)/%.S
-	$(CC) $$(CFLAGS) $(INCLUDE) -c $$< -o $$@
+	$(Q)echo "CC $$(@)"
+	$(Q)$(CC) $$(CFLAGS) $(INCLUDE) -c $$< -o $$@
 
 $(1)_OBJS=$(patsubst %,$(1)/objs/%,$(OBJS))
 $(1)/$(APP): ../../libcmini.a $$($(1)_OBJS)
-	$(CC) $$(CFLAGS) -Wl,-Map,$(1)/mapfile -o $$@ ../../$(1)/startup.o $$($(1)_OBJS) -L../../$(1) $(LIBS)
-	$(STRIP) $$@
+	$(Q)echo "LD $$(@)"
+	$(Q)$(CC) $$(CFLAGS) -Wl,-Map,$(1)/mapfile -o $$@ ../../$(1)/startup.o $$($(1)_OBJS) -L../../$(1) $(LIBS)
+	$(Q)$(STRIP) $$@
 endef
 $(foreach DIR,$(TRGTDIRS),$(eval $(call CC_TEMPLATE,$(DIR))))
 
 $(DEPEND): $(ASRCS) $(CSRCS)
-	-rm -f $(DEPEND)
-	for d in $(TRGTDIRS);\
+	-$(Q)rm -f $(DEPEND)
+	-$(Q)for d in $(TRGTDIRS);\
 		do $(CC) $(CFLAGS) $(INCLUDE) -M $(ASRCS) $(CSRCS) | sed -e "s#^\(.*\).o:#$$d/objs/\1.o:#" >> $(DEPEND); \
     done
 
