--- a/tests/bench/Makefile
+++ b/tests/bench/Makefile
@@ -87,6 +87,11 @@ mshort/mfastcall/$(APP):CFLAGS += -mshort -mfastcall
 m68020-60/mshort/mfastcall/$(APP): CFLAGS += -m68020-60 -mshort -mfastcall
 endif
 
+all: dirs $(patsubst %,%/$(APP),$(TRGTDIRS))
+
+dirs::
+	mkdir -p $(TRGTDIRS) $(OBJDIRS)
+
 ifneq ($(DEVKITMINT),) 
 # ardi's toolchain stuff
 APP := $(APP:.ttp=.elf)
@@ -103,7 +108,6 @@ ctest: $(TEST_APP)
 
 endif
 
-all:$(patsubst %,%/$(APP),$(TRGTDIRS))
 #
 # generate pattern rules for multilib object files.
 #
