Automatically detect availability of -mfastcall option

--- a/tests/malltest/Makefile
+++ b/tests/malltest/Makefile
@@ -10,7 +10,6 @@ CROSSBINDIR_IS_Y=m68k-atari-mint-
 CROSSBINDIR_IS_N=
 
 BUILD_CF=N
-BUILD_FAST=N
 
 CROSSBINDIR=$(CROSSBINDIR_IS_$(CROSS))
 
@@ -31,11 +30,12 @@ DEPEND=depend
 
 INCLUDE=-I../../include -nostdlib
 LIBS=-lcmini -nostdlib -lgcc -lcmini
-CC=$(PREFIX)/bin/gcc
 
 CC=$(CROSSBINDIR)gcc
 STRIP=$(CROSSBINDIR)strip
 STACK=$(CROSSBINDIR)stack
+
+BUILD_FAST=$(shell if $(CC) -mfastcall -E - < /dev/null >/dev/null 2>&1; then echo Y; else echo N; fi)
 
 APP=malltest.ttp
 TEST_APP=$(APP)
