- added TARGET, TARGET_FOR_LIB, TARGET_FOR_INCLUDE and TARGET_FOR_STARTUP         for fine adjustment of the installation - applied multilib stuff to tests too - fixed strndup - fixed (partially) double symbols in strtoull_int.c when compiled with -O2 - TODO using of local labels ins __asm__ see .add64_end in strtoull_int.c

--- a/tests/bench/Makefile
+++ b/tests/bench/Makefile
@@ -87,6 +87,8 @@ mshort/mfastcall/$(APP):CFLAGS += -mshort -mfastcall
 m68020-60/mshort/mfastcall/$(APP): CFLAGS += -m68020-60 -mshort -mfastcall
 endif
 
+MULTILIBDIRECTORY = `$(CC) $$(CFLAGS) -print-multi-directory`
+
 all: dirs $(patsubst %,%/$(APP),$(TRGTDIRS))
 
 dirs::
@@ -121,9 +123,9 @@ $(1)/%.o:$(SRCDIR)/%.S
 	$(Q)$(CC) $$(CFLAGS) $(INCLUDE) -c $$< -o $$@
 
 $(1)_OBJS=$(patsubst %,$(1)/objs/%,$(OBJS))
-$(1)/$(APP): ../../libcmini.a $$($(1)_OBJS)
+$(1)/$(APP): $$($(1)_OBJS)
 	$(Q)echo "CC $$(@)"
-	$(Q)$(CC) $$(CFLAGS) -Wl,-Map,$(1)/mapfile -o $$@ ../../$(1)/startup.o $$($(1)_OBJS) -L../../$(1) $(LIBS)
+	$(Q)$(CC) $$(CFLAGS) -Wl,-Map,$(1)/mapfile -o $$@ ../../build/$(MULTILIBDIRECTORY)/startup.o $$($(1)_OBJS) -L../../build/$(MULTILIBDIRECTORY) $(LIBS)
 	$(Q)$(STRIP) $$@
 endef
 $(foreach DIR,$(TRGTDIRS),$(eval $(call CC_TEMPLATE,$(DIR))))
