--- a/tests/sprintf_test/Makefile
+++ b/tests/sprintf_test/Makefile
@@ -9,10 +9,10 @@ APP=sprinttst.tos
 
 BUILD_FAST=$(shell if $(CC) -mfastcall -E - < /dev/null >/dev/null 2>&1; then echo Y; else echo N; fi)
 ifeq ($(BUILD_FAST), Y)
-LIBDIR=../../mfastcall
+LIBDIR = ../../build/$(shell $(CC) -mfastcall -print-multi-directory)
 MFASTCALL = -mfastcall
 else
-LIBDIR=../..
+LIBDIR:=../../build/$(shell $(CC) -print-multi-directory)
 MFASTCALL =
 endif
 
@@ -27,24 +27,11 @@ CFLAGS=\
 
 all: $(APP)
 
-ifneq ($(DEVKITMINT),) 
-# ardi's toolchain stuff
-$(APP) :
-
-%.tos: %.elf
-	tostool $< $@
-
-%.elf: $(LIBDIR)/libcmini.a $(OBJS)
-	$(CC) $(LIBDIR)/startup.o -o $@ $(OBJS) -Wl,-Map,mapfile $(CFLAGS) $(LIBS)
-
-else
-
 $(APP): $(LIBDIR)/libcmini.a $(OBJS)
 	$(Q)echo "CC $(@)"
 	$(Q)$(CC) $(LIBDIR)/startup.o -o $(APP) $(OBJS) $(CFLAGS) $(LIBS)
 	$(Q)m68k-atari-mint-strip $(APP)
 
-endif
 	
 clean:
 	- $(Q)rm -f $(APP) $(OBJS) 
