Rename startup files, and make minicrt0.S usable for ACCs

--- a/tests/acctest/Makefile
+++ b/tests/acctest/Makefile
@@ -124,7 +124,7 @@ $(1)/%.o:$(SRCDIR)/%.S
 $(1)_OBJS=$(patsubst %,$(1)/objs/%,$(OBJS))
 $(1)/$(APP): $$($(1)_OBJS)
 	$(Q)echo "LD $$(@)"
-	$(Q)$(CC) $$(CFLAGS) -Wl,-Map,$(1)/mapfile -o $$@ ../../build/$(MULTILIBDIRECTORY)/startup.o $$($(1)_OBJS) -L../../build/$(MULTILIBDIRECTORY) $(LIBS)
+	$(Q)$(CC) $$(CFLAGS) -Wl,-Map,$(1)/mapfile -o $$@ ../../build/crt0.o $$($(1)_OBJS) -L../../build/$(MULTILIBDIRECTORY) $(LIBS)
 	$(Q)$(STRIP) $$@
 endef
 $(foreach DIR,$(TRGTDIRS),$(eval $(call CC_TEMPLATE,$(DIR))))
