--- a/tests/malltest/Makefile
+++ b/tests/malltest/Makefile
@@ -129,7 +129,7 @@ $(1)/%.o:$(SRCDIR)/%.S
 $(1)_OBJS=$(patsubst %,$(1)/objs/%,$(OBJS))
 $(1)/$(APP): $$($(1)_OBJS)
 	$$(Q)echo "CC $$(@)"
-	$$(Q)$(CC) $$(CFLAGS) -o $$@ ../../build/$(MULTILIBDIRECTORY)/startup.o $$($(1)_OBJS) -L../../build/$(MULTILIBDIRECTORY) $(LIBS)
+	$$(Q)$(CC) $$(CFLAGS) -o $$@ ../../build/crt0.o $$($(1)_OBJS) -L../../build/$(MULTILIBDIRECTORY) $(LIBS)
 endef
 $(foreach DIR,$(TRGTDIRS),$(eval $(call CC_TEMPLATE,$(DIR))))
 
