Fix Makefiles in tests directory for coldfire+fastcall

--- a/tests/argstest/Makefile
+++ b/tests/argstest/Makefile
@@ -9,6 +9,7 @@ CROSSBINDIR_IS_Y=m68k-atari-mint-
 CROSSBINDIR_IS_N=
 
 BUILD_CF=N
+BUILD_FAST=$(shell if $(CC) -mfastcall -E - < /dev/null >/dev/null 2>&1; then echo Y; else echo N; fi)
 
 CROSSBINDIR=$(CROSSBINDIR_IS_$(CROSS))
 
@@ -26,8 +27,6 @@ else
 endif
 
 DEPEND=depend
-
-BUILD_FAST=$(shell if $(CC) -mfastcall -E - < /dev/null >/dev/null 2>&1; then echo Y; else echo N; fi)
 
 INCLUDE=-I../../include -nostdlib
 LIBS=-lcmini -nostdlib -lgcc -lcmini
@@ -55,37 +54,34 @@ COBJS=$(patsubst $(SRCDIR)/%.o,%.o,$(patsubst %.c,%.o,$(CSRCS)))
 AOBJS=$(patsubst $(SRCDIR)/%.o,%.o,$(patsubst %.S,%.o,$(ASRCS)))
 OBJS=$(COBJS) $(AOBJS)
 
+TRGTDIRS=. ./m68020-60 ./mshort ./m68020-60/mshort
 ifeq ($(BUILD_FAST), Y)
-	ifeq ($(BUILD_CF), Y)
-		TRGTDIRS=. ./m68020-60 ./m5475 ./mshort ./m68020-60/mshort ./m5475/mshort ./mfastcall ./m68020-60/mfastcall ./mshort/mfastcall ./m68020-60/mshort/mfastcall
-	else
-		TRGTDIRS=. ./m68020-60 ./mshort ./m68020-60/mshort ./mfastcall ./m68020-60/mfastcall ./mshort/mfastcall ./m68020-60/mshort/mfastcall
-	endif
-else
-	ifeq ($(BUILD_CF), Y)
-		TRGTDIRS=. ./m68020-60 ./m5475 ./mshort ./m68020-60/mshort ./m5475/mshort
-	else
-		TRGTDIRS=. ./m68020-60 ./mshort ./m68020-60/mshort
+	TRGTDIRS += ./mfastcall ./m68020-60/mfastcall ./mshort/mfastcall ./m68020-60/mshort/mfastcall
+endif
+ifeq ($(BUILD_CF), Y)
+	TRGTDIRS += ./m5475 ./m5475/mshort
+	ifeq ($(BUILD_FAST), Y)
+	TRGTDIRS += ./m5475/mfastcall ./m5475/mshort/mfastcall
 	endif
 endif
 OBJDIRS=$(patsubst %,%/objs,$(TRGTDIRS))
 
+all: dirs $(patsubst %,%/$(APP),$(TRGTDIRS))
+
 #
 # multilib flags. These must match m68k-atari-mint-gcc -print-multi-lib output
 #
-m68020-60/$(APP):CFLAGS += -m68020-60
-m5475/$(APP):CFLAGS += -mcpu=5475
-mshort/$(APP):CFLAGS += -mshort
+m68020-60/$(APP): CFLAGS += -m68020-60
+m5475/$(APP): CFLAGS += -mcpu=5475
+mshort/$(APP): CFLAGS += -mshort
 m68020-60/mshort/$(APP): CFLAGS += -m68020-60 -mshort
 m5475/mshort/$(APP): CFLAGS += -mcpu=5475 -mshort
-ifeq ($(BUILD_FAST), Y)
-mfastcall/$(APP):CFLAGS += -mfastcall
-m68020-60/mfastcall/$(APP):CFLAGS += -m68020-60 -mfastcall
-mshort/mfastcall/$(APP):CFLAGS += -mshort -mfastcall
+m5475/mshort/mfastcall/$(APP): CFLAGS += -mcpu=5475 -mshort -mfastcall
+m5475/mfastcall/$(APP): CFLAGS += -mcpu=5475 -mfastcall
+mfastcall/$(APP): CFLAGS += -mfastcall
+m68020-60/mfastcall/$(APP): CFLAGS += -m68020-60 -mfastcall
+mshort/mfastcall/$(APP): CFLAGS += -mshort -mfastcall
 m68020-60/mshort/mfastcall/$(APP): CFLAGS += -m68020-60 -mshort -mfastcall
-endif
-
-all: dirs $(patsubst %,%/$(APP),$(TRGTDIRS))
 
 dirs::
 	mkdir -p $(TRGTDIRS) $(OBJDIRS)
