Add mintelf support
It should also fix a few issues for the FASTCALL cases (fastcall
passes/returns doubles in FPU registers for -m68881).

Fixes #117.

--- a/tests/bench/Makefile
+++ b/tests/bench/Makefile
@@ -6,7 +6,11 @@ endif
 
 CROSS=Y
 
+ifneq (,$(filter $(COMPILE_ELF),Y yes))
+CROSSBINDIR_IS_Y=m68k-atari-mintelf-
+else
 CROSSBINDIR_IS_Y=m68k-atari-mint-
+endif
 CROSSBINDIR_IS_N=
 
 BUILD_CF=N
@@ -121,7 +125,7 @@ $(1)/%.o:$(SRCDIR)/%.S
 $(1)_OBJS=$(patsubst %,$(1)/objs/%,$(OBJS))
 $(1)/$(APP): $$($(1)_OBJS)
 	$(Q)echo "CC $$(@)"
-	$(Q)$(CC) $$(CFLAGS) -Wl,-Map,$(1)/mapfile -o $$@ ../../build/crt0.o $$($(1)_OBJS) -L../../build/$(MULTILIBDIRECTORY) $(LIBS)
+	$(Q)$(CC) $$(CFLAGS) -Wl,-Map,$(1)/mapfile -o $$@ ../../build/$(1)/objs/crt0.o $$($(1)_OBJS) -L../../build/$(1) $(LIBS)
 	$(Q)$(STRIP) $$@
 endef
 $(foreach DIR,$(TRGTDIRS),$(eval $(call CC_TEMPLATE,$(DIR))))
