--- a/tests/acctest/Makefile
+++ b/tests/acctest/Makefile
@@ -6,7 +6,11 @@ endif
 
 CROSS=Y
 
+ifneq (,$(filter $(COMPILE_ELF),Y yes))
+CROSSBINDIR_IS_Y=m68k-atari-mintelf-
+else
 CROSSBINDIR_IS_Y=m68k-atari-mint-
+endif
 CROSSBINDIR_IS_N=
 
 BUILD_CF=N
@@ -17,21 +21,16 @@ CROSSBINDIR=$(CROSSBINDIR_IS_$(CROSS))
 UNAME := $(shell uname)
 ifeq ($(CROSS), Y)
 ifeq ($(UNAME),Linux)
-PREFIX=m68k-atari-mint
 HATARI=hatari
 else
-PREFIX=m68k-atari-mint
 HATARI=/usr/local/bin/hatari
 endif
-else
-PREFIX=/usr
 endif
 
 DEPEND=depend
 
 INCLUDE=-I. -I../../include -nostdlib
 LIBS=-lcmini -nostdlib -lgem -lgcc -lcmini
-CC=$(PREFIX)/bin/gcc
 
 CC=$(CROSSBINDIR)gcc
 STRIP=$(CROSSBINDIR)strip
@@ -120,7 +119,7 @@ $(1)/%.o:$(SRCDIR)/%.S
 $(1)_OBJS=$(patsubst %,$(1)/objs/%,$(OBJS))
 $(1)/$(APP): $$($(1)_OBJS)
 	$(Q)echo "LD $$(@)"
-	$(Q)$(CC) $$(CFLAGS) -Wl,-Map,$(1)/mapfile -o $$@ ../../build/crt0.o $$($(1)_OBJS) -L../../build/$(MULTILIBDIRECTORY) $(LIBS)
+	$(Q)$(CC) $$(CFLAGS) -Wl,-Map,$(1)/mapfile -o $$@ ../../build/$(1)/objs/crt0.o $$($(1)_OBJS) -L../../build/$(1) $(LIBS)
 	$(Q)$(STRIP) $$@
 endef
 $(foreach DIR,$(TRGTDIRS),$(eval $(call CC_TEMPLATE,$(DIR))))
